--- a/Paper/Milestone3.tex
+++ b/Paper/Milestone3.tex
@@ -122,7 +122,7 @@ Table~\ref{tab:corpus} shows the contents of our corpus and how we classified ea
 Using the data from our corpus, we first analyzed the release cycles of the different categories of applications. This was done using each release in the corpus listed in Table~\ref{tab:corpus}. 
 
 
-Then, we classified each of the statements within the release notes to fall into one of six categories: bugs, enhancements, features, non-functional requirements, advertisements, and rating change request.
+Then, we classified each of the statements within the release notes to fall into one of six categories: bugs, enhancements, features, non-functional requirements, gratitude, and feedback/contact.
 Statements which describe two or more changes are split into atomic parts for more accurate classification.
 \TODO{Add historgram results of common word usages for each category}
 
@@ -139,27 +139,48 @@ An example of a statement belonging in the enhancement category is "Added prefer
 Statements belonging to the features category most often contain the words "...", "...", and "..." 
 
 \MyParagraph{Non-Functional Requirements: }The non-functional requirements category describes statements in release notes that do not fix or enhance old functionalities or introduce new functionality to the application.
-This category includes all changes to application user interfaces and balancing in game applications as well as miscellaneous information the developer includes.
-Two examples of statements belonging in the non-functional requirements category are "Thanks for using Afterlight, and we hope you enjoy this free update! You can follow us personally for occasional hints at new features, @simonfilip and @keynut" and "We polished up our font so all the letter tiles should come back sharp."
+This category includes all changes to help documentation, licensing, EULAs, typo fixes, and translations.
+An example of a statement belonging in the non-functional requirements category is "We polished up our font so all the letter tiles should come back sharp."
 Statements belonging to the non-functional requirements category most often contain the words "...", "...", and "..." 
 
-\MyParagraph{Advertisements: }The advertisements category describes statements in release notes that try to drum up support and market the application.
-This type of release note statement commonly appears in mobile application release notes and \TODO{infrequently | never} in desktop applications.
-An example of a statement belonging in the advertisements category is "Keep tagging your Instagram photos with \#afterglowapp, we love seeing them!"
+%are "Thanks for using Afterlight, and we hope you enjoy this free update! You can follow us personally for occasional hints at new features, @simonfilip and @keynut"
+
+\MyParagraph{Gratitude: }The gratitude category describes statements in release notes that thank or acknowledge users of the application.
+This type of release note statement commonly appears in mobile application release notes and more \TODO{infrequently | never} in desktop applications.
+Instances of this category often appear along side instances of the feedback/contact category.
+An example of a statement belonging in the advertisements category is "Thanks so much, everyone, for playing Words with Friends."
 Statements belonging to the advertisements category most often contain the words "...", "...", and "..." 
 
-\MyParagraph{Rating change request : }The rating change request category describes statements in release notes that solicit users to improve their previous rating of the application.
-This type of release note statement appears in mobile application release notes in response to bad reviews that describe a bug released in a specific version and \TODO{infrequently | never} in desktop applications.
-An example of a statement belonging in the rating change request category is "If you've left a 1-star review for a 4.0.2 crash and this update fixes it for you, I'd appreciate it if you'd update your review. Thank you."
+\MyParagraph{Feedback/Contact : }The feedback/contact category describes statements in release notes that solicit users to provide feedback, acknowledge changes based on user feedback, or ways to get in touch with the developers.
+This type of release note statement appears in mobile application release notes and \TODO{infrequently | never} in desktop applications.
+Some examples of statements belonging in the feedback/contact category are "keep the feedback coming!", "We've listened to your feedback and addressed several concerns with this update", and  "If you have a suggestion, you can either leave us a review, or contact us through afterglow-app.com. We'd love to hear your suggestions for Afterglow version 1.3, releasing next month!".
 Statements belonging to the advertisements category most often contain the words "...", "...", and "..." 
 
+There is an additional category that we do not analyze that contains titles, headers, punctuation, other organizational type text, or duplications that is not considered in our analysis.
 
-\TODO{reWrite}
-Next, we will store our classifications into json.
-We chose json because it is a widely used data storage format for which many programming languages have support. 
+\subsection{Classification of Statements}
+The classification of the statements will be carried out using qualitative thematic coding. 
+Each of the classifications was done manually by the authors using the criteria detailed above.
+The authors validated their classifications by reaching 79\% agreement on 20\% of corpus.
+Here the corpus refers to individual statements within the release notes, which are taken from the bolded applications in Table~\ref{tab:corpus}.
+The authors took a random sample across the corpus of statements and both classified the same data to compare for agreement. 
+
+Classification was carried out in two phases, the first broke the data into the categories: bug, feature, enhancement, and miscellaneous.
+The second phase saw the miscellaneous category divided into the non-functional, gratitude, and feedback/contact categories based on general themes that emerged.
+
 We implemented a tool to help us efficiently and atomically classify each statement.
-By using a well supported data container, we will be able to switch quickly between the different languages.
-Additionally, if we wanted to share our data, using json increases the ease for other researchers to handle our data.
+The tool also converted the data from its raw form, to a standardized format broken up by application and release.
+Once uniformly contained, the tool would display a single statement from a chosen release and allow the authors to tag it with a single classification. 
+If multiple classifications applied to a statement, the authors would split the statement into two single-tagged lines.
+For example, "Bug fixes and improvements" splits into "Bug fixes and" placed in the Bug category and improvements" placed in the Enhancements category.
+Our motivation for single-tagged lines considered potential future work using the classifications to create dictionaries for automatic classification, which would be easier if given distinct word banks.
+
+
+
+\subsection{Storage of Statements}
+After classifying each statement, we stored the data in json format to maintain the most information about the data.
+We chose json because it is a widely used data storage format for which many programming languages have support. 
+Additionally, if other researchers use our corpus, storing the data in json increases the ease for other researchers to handle our data.
 
 The data is organized by version (see Figure \ref{fig:jsonEx}). Each version contains: 
 \begin{itemize}
@@ -228,10 +249,7 @@ We may want to exclude this sample from our general analysis or may want to furt
 
 Finally, we will develop scripts that take the information we have stored and perform statistical analysis on the certain cut of our standardized dataset to best answer the three research questions below.
 
-\subsection{Classification of Statements}
-The classification of the statements will be carried out using qualitative thematic coding. 
-Each of the classifications was done manually by the authors using the criteria detailed above.
-Authors' classifications will be validated by reaching 80\% agreement on 20\% of corpus.
+
 
 \section{Analysis}
 
@@ -252,6 +270,8 @@ Multiple branches may be maintained across mobile platforms, but this is not evi
 
 
 \subsection{Release Cycle Contents}
+
+
 
 \section{Conclusions}
 
