--- a/Paper/tables.tex
+++ b/Paper/tables.tex
@@ -1,5 +1,5 @@
 % latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Thu Dec 11 18:42:05 2014
+% Thu Dec 11 18:49:47 2014
 \begin{table}[ht]
 \centering
 \caption{Bugs} 
@@ -7,14 +7,14 @@
   \hline
 Application Comparison & p-value \\ 
   \hline
-Mobile vs Desktop & 5.61E-16 \\ 
-  Mobile vs Sibling & 1.94E-02 \\ 
-  Sibling vs Desktop & 2.91E-11 \\ 
+Mobile vs Desktop & 2.20E-17 \\ 
+  Mobile vs Sibling & 5.69E-04 \\ 
+  Sibling vs Desktop & 1.13E-09 \\ 
    \hline
 \end{tabular}
 \end{table}
 % latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Thu Dec 11 18:42:05 2014
+% Thu Dec 11 18:49:47 2014
 \begin{table}[ht]
 \centering
 \caption{Features} 
@@ -22,14 +22,14 @@ Mobile vs Desktop & 5.61E-16 \\
   \hline
 Application Comparison & p-value \\ 
   \hline
-Mobile vs Desktop & 1.67E-01 \\ 
-  Mobile vs Sibling & 1.71E-01 \\ 
-  Sibling vs Desktop & 8.10E-03 \\ 
+Mobile vs Desktop & 9.89E-01 \\ 
+  Mobile vs Sibling & 4.83E-03 \\ 
+  Sibling vs Desktop & 1.29E-02 \\ 
    \hline
 \end{tabular}
 \end{table}
 % latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Thu Dec 11 18:42:05 2014
+% Thu Dec 11 18:49:47 2014
 \begin{table}[ht]
 \centering
 \caption{Enhancements} 
@@ -37,24 +37,39 @@ Mobile vs Desktop & 1.67E-01 \\
   \hline
 Application Comparison & p-value \\ 
   \hline
-Mobile vs Desktop & 6.44E-09 \\ 
-  Mobile vs Sibling & 7.54E-01 \\ 
-  Sibling vs Desktop & 3.30E-07 \\ 
+Mobile vs Desktop & 1.48E-08 \\ 
+  Mobile vs Sibling & 7.96E-01 \\ 
+  Sibling vs Desktop & 9.59E-08 \\ 
    \hline
 \end{tabular}
 \end{table}
 % latex table generated in R 3.1.1 by xtable 1.7-4 package
-% Thu Dec 11 18:42:05 2014
+% Thu Dec 11 18:49:47 2014
 \begin{table}[ht]
 \centering
-\caption{Enhancements} 
+\caption{Non-Functional} 
 \begin{tabular}{lr}
   \hline
 Application Comparison & p-value \\ 
   \hline
-Mobile vs Desktop & 2.40E-04 \\ 
-  Mobile vs Sibling & 3.56E-03 \\ 
-  Sibling vs Desktop & 4.93E-01 \\ 
+Mobile vs Desktop & 8.49E-03 \\ 
+  Mobile vs Sibling & 1.15E-01 \\ 
+  Sibling vs Desktop & 3.08E-01 \\ 
+   \hline
+\end{tabular}
+\end{table}
+% latex table generated in R 3.1.1 by xtable 1.7-4 package
+% Thu Dec 11 18:49:47 2014
+\begin{table}[ht]
+\centering
+\caption{Cycle Length} 
+\begin{tabular}{lr}
+  \hline
+Application Comparison & p-value \\ 
+  \hline
+Mobile vs Desktop & 1.57E-02 \\ 
+  Mobile vs Sibling & 7.15E-01 \\ 
+  Sibling vs Desktop & 9.16E-03 \\ 
    \hline
 \end{tabular}
 \end{table}
