--- a/Paper/macros.tex
+++ b/Paper/macros.tex
@@ -153,7 +153,7 @@ morestring=[b]',
 \newcommand{\TotalNumReleases}{288\space}
 
 \newcommand{\RQOne}{\textbf{RQ1:} Do mobile applications exhibit more frequent releases than desktop applications?}
-\newcommand{\RQTwo}{\textbf{RQ2:} Do applications with siblings behave more like mobile or desktop apps?}
+\newcommand{\RQTwo}{\textbf{RQ2:} Do sibling applications' release cycles behave more like mobile or desktop apps?}
 \newcommand{\RQThree}{\textbf{RQ3:} Are bugs/features/enhancements more common in desktop, mobile, or sibling applications?}
 
 \newcommand{\sibs}{sibling applications\space}
