--- a/Paper/tablesShortcycle.tex
+++ b/Paper/tablesShortcycle.tex
@@ -2,14 +2,12 @@
 % Fri Dec 12 10:08:14 2014
 \begin{table}[ht]
 \centering
-\caption{Enhancements} 
+\caption{Cycle Length} 
 \begin{tabular}{lr}
   \hline
 Application Comparison & p-value \\ 
   \hline
-Mobile vs Desktop & 1.03E-08 \\ 
-  Mobile vs Sibling & 6.58E-01 \\ 
-  Sibling vs Desktop & 1.26E-07 \\ 
+Mobile vs Desktop & 6.35E-04 \\ 
    \hline
 \end{tabular}
 \end{table}
