Added some to the paper

--- a/Paper/Milestone3.tex
+++ b/Paper/Milestone3.tex
@@ -308,7 +308,11 @@ During that time, no new Visual studio was released, so perhaps the developers d
 
 \subsection{Release Cycle Contents}
 
+To analyze the release cycle contents after classification, we added up the instances of each category (bug, feature, enhancement, non-functional, gratitude, and feedback/contact) to create a summary of the release.
 
+After each release was summarized, we pulled the information from each summary and grouped by statement category for each application of that type into lists. 
+For example, Desktop Application 1 has two releases containing 2 bugs and 2 features and 4 bugs and 0 features. After being grouped by type desktop applications will have a list of bugs containing 2 and 4 and a list of features containing 4 and 0.
+From these lists we are able to calculated the statistics for what type of contents constitute a common release.
 
 \section{Conclusions}
 
